change001 index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <link rel="stylesheet" href="./dist/css/slider-pro.min.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.slider-pro.min.js"></script>
+<script type="text/javascript">
+$(function(){
+         $('#slider').sliderPro();
+});
+</script>
+
 </STYLE>
 </HEAD>
 
@@ -17,12 +23,6 @@
 	<li class="sp-slide"><img class="sp-image" src="images/sample-04.png"></li>
 	……
 </ul>
-
-<script>
-$(function(){
-	 $('#slider').sliderPro();
-});
-</script>
 
 </BODY>
 </HTML>
